@@ -2,6 +2,10 @@
 SimpleMail Open Source - ChangeLog
 ----------------------------------
 
+2005-12-29  Bernd Gollesch <bgollesch@sime.at>
+	* text2html.c: Added some checks against wrong utf8 sequences which could bring
+	  simplemail into an endless loop.
+
 2005-12-27  Bernd Gollesch <bgollesch@sime.at>
 	* mail.c: Added Thunderbird compatibility for X-Priority (High or Highest maps to
 	  Importance: high).
